# CLegMed

./:  sonar-project.properties  CMakeLists.txt  README.md  REQUIREMENTS.md  sonar-project.properties
.github/workflows/: build.yml  cmake-multi-platform.yml
cmake/: core.cmake  plugins.generic.cmake  plugins.persistence.cmake  utils.cmake
docs/adr/: 0002-pipes-and-filters-architecture.md
include/: sonar_placeholder.cpp
include/clegmed/core/: CLegMed.hpp  Consumer.hpp  Filter.hpp  InputPipe.hpp  OutputPipe.hpp  Pipe.hpp  Processor.hpp  Producer.hpp  Traits.hpp  library.h
include/clegmed/core/detail/: SignalHandler.hpp
include/clegmed/core/flowgraph/: ExecutableGraph.hpp  FlowGraph.hpp  FlowGraphConfig.hpp  PipelineBuilder.hpp
include/clegmed/plugins/: shortcuts.hpp
include/clegmed/plugins/generic/: GenericConsumer.hpp  GenericProcessor.hpp  GenericProducer.hpp
include/clegmed/plugins/persistence/generic/: PersistentConsumer.hpp
include/clegmed/plugins/persistence/repository/: Repository.hpp
include/clegmed/plugins/persistence/repository/imdb/: IMDBRepository.hpp
include/clegmed/plugins/persistence/timer/: PersistentTimer.hpp  TimerUtils.hpp
include/clegmed/utils/: EntityTraits.hpp  OptionalReference.hpp
src/core/: CMakeLists.txt  Filter.cpp  OutpuPipe.cpp  library.cpp
src/plugins/: CMakeLists.txt
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt
tests/core/: CLegMedTest.cpp  CMakeLists.txt  FilterTest.cpp  FlowGraphBenchmark.cpp  FlowGraphTest.cpp  HelloWorld.cpp  HelloWorldTest.cpp  ProcessorTest.cpp  ProducerTest.cpp
tests/plugins/generic/: CMakeLists.txt  GenericConsumerTest.cpp  GenericFlowGraphTest.cpp  GenericProcessorTest.cpp  GenericProducerTest.cpp  HelloWorld.cpp
tests/plugins/persistence/: CMakeLists.txt
tests/plugins/persistence/fixtures/: Customer.hpp
tests/plugins/persistence/generic/: PersistentConsumerTest.cpp
tests/plugins/persistence/repository/: IMDBRepositoryTest.cpp
tests/plugins/persistence/timer/: PersistentTimerTest.cpp  TimerUtilsTest.cpp
tests/utils/: Await.hpp  LoggerTest.cpp
